[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Projectiles/sword-1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/practice-projectile.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.51097

[node name="practice-projectile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.785398
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="projectile" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="projectile"]
position = Vector2( 6.6665, -0.138095 )
shape = SubResource( 1 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="projectile" to="." method="_on_projectile_area_entered"]
[connection signal="area_shape_entered" from="projectile" to="." method="_on_projectile_area_shape_entered"]
[connection signal="body_entered" from="projectile" to="." method="_on_projectile_body_entered"]
